# NetMauMau

./: .gitignore  CODE_OF_CONDUCT.md  Makefile.am  README.md  THANKS  configure.ac  mingw32.patch  netmaumau.h2m.in  netmaumau.pc.in  netmaumau.xinetd.in  nmm-server  nmm-server.bc.in  start-server.sh.in  stdrules.lua
debian/: changelog  control  libnetmaumauclient0.install  libnetmaumauclient4.shlibs  libnetmaumauclient5.lintian-overrides  libnetmaumauclient5.shlibs  libnetmaumaucommon0.install  libnetmaumaucommon5.shlibs  libnetmaumaucommon6.lintian-overrides  libnetmaumaucommon6.shlibs  netmaumau-dev.install  netmaumau-dev.links  netmaumau-dev.lintian-overrides  netmaumau-server-common.install  netmaumau-server-common.lintian-overrides  netmaumau-server.install  netmaumau-server.lintian-overrides  rules  (+2 more)
doc/: DoxygenLayout.xml  Makefile.am  client.dox.in  engine.dox.in
src/: Makefile.am
src/ai/: Makefile.am  abstractaction.cpp  abstractaction.h  abstractcondition.cpp  abstractcondition.h  aceroundaction.aai  aceroundaction.cpp  aceroundaction.h  aceroundcondition.cai  aceroundcondition.cpp  aceroundcondition.h  aiplayer.h  baseaiplayer.h  bestjackaction.aai  bestjackaction.cpp  bestjackaction.h  bestsuitcondition.cai  bestsuitcondition.cpp  bestsuitcondition.h  binarycondition.h  checkjacksuitaction.cpp  checkjacksuitaction.h  checksevencondition.cai  checksevencondition.cpp  checksevencondition.h  decisionbase.cpp  decisionbase.h  decisionchain.h  genaction.awk  gencondition.awk  havejackcondition.cai  havejackcondition.cpp  havejackcondition.h  havelessthancondition.h  iaction.h  iaistate.h  icondition.h  jackonlycondition.cai  jackonlycondition.cpp  jackonlycondition.h  (+49 more)
src/aidt/: Makefile.am  abstractaction.cpp  abstractaction.h  abstractcondition.cpp  abstractcondition.h  aceroundaction.cpp  aceroundaction.h  aceroundcondition.cpp  aceroundcondition.h  aistate.cpp  aistate.h  bestjackaction.cpp  bestjackaction.h  bestsuitcondition.cpp  bestsuitcondition.h  binarycondition.h  checkjacksuitaction.cpp  checkjacksuitaction.h  checksevencondition.cpp  checksevencondition.h  decisiontree.cpp  decisiontree.h  havejackcondition.cpp  havejackcondition.h  havelessthancondition.h  iaction.h  iaistate.h  icondition.h  jackonlycondition.cpp  jackonlycondition.h  jackremoverbase.cpp  jackremoverbase.h  jacksuitaction.cpp  jacksuitaction.h  maxsuitaction.cpp  maxsuitaction.h  nextaction.cpp  nextaction.h  playjackaction.cpp  playjackaction.h  (+19 more)
src/client/: Makefile.am  abstractclient.cpp  abstractclient.h  abstractclientv05impl.cpp  abstractclientv05impl.h  base64bridge.cpp  base64bridge.h  capabilitiesexception.cpp  clientcardfactory.cpp  clientcardfactory.h  clientconnection.cpp  clientconnection.h  clientconnectionimpl.cpp  clientconnectionimpl.h  connectionrejectedexception.cpp  gamerunningexception.cpp  interceptederrorexception.cpp  interceptederrorexception.h  lostconnectionexception.cpp  nonetmaumauserverexception.cpp  playerlistexception.cpp  protocolerrorexception.cpp  remoteplayerexception.cpp  scoresexception.cpp  shutdownexception.cpp  timeoutexception.cpp  timeoutexception.h  versionmismatchexception.cpp
src/common/: Makefile.am  abstractconnection.cpp  abstractconnection.h  abstractconnectionimpl.cpp  abstractconnectionimpl.h  abstractsocket.cpp  abstractsocket.h  abstractsocketimpl.cpp  abstractsocketimpl.h  base64.cpp  base64.h  basiclogger.h  cardtools.cpp  cardtools.h  ci_char_traits.cpp  ci_char_traits.h  ci_string.cpp  ci_string.h  condition.cpp  condition.h  defaultplayerimage.cpp  eff_map.h  errorstring.cpp  errorstring.h  icard.h  icardfactory.h  iobserver.h  iplayer.h  logger.cpp  logger.h  mimemagic.cpp  mimemagic.h  mutex.h  mutexlocker.cpp  mutexlocker.h  observable.h  pathtools.cpp  pathtools.h  pngcheck.cpp  pngcheck.h  (+25 more)
src/engine/: Makefile.am  abstractplayer.cpp  abstractplayer.h  aiplayerbase.h  defaulteventhandler.cpp  defaulteventhandler.h  easyplayer.cpp  easyplayer.h  engine.cpp  engine.h  engineconfig.cpp  engineconfig.h  enginecontext.cpp  enginecontext.h  hardplayer.cpp  hardplayer.h  iaceroundlistener.h  icardcountobserver.h  ieventhandler.h  iplayedoutcards.h  iruleset.h  italonchange.h  nextturn.cpp  nextturn.h  nullaceroundlistener.cpp  nullaceroundlistener.h  nullcardcountobserver.cpp  nullcardcountobserver.h  nullconnection.cpp  nullconnection.h  nullruleset.cpp  nullruleset.h  random_gen.h  rngimpl.cpp  serverplayerexception.cpp  serverplayerexception.h  stdcardfactory.cpp  stdcardfactory.h  stdplayer.cpp  stdplayer.h  (+4 more)
src/images/: Makefile.am  create_ai_icon.sh
src/include/: Makefile.am  abstractclient.h  abstractconnection.h  abstractsocket.h  base64.h  capabilitiesexception.h  cardtools.h  clientconnection.h  connectionrejectedexception.h  defaultplayerimage.h  gamerunningexception.h  ibase64.h  icard.h  iconnection.h  inullable.h  iplayerpiclistener.h  linkercontrol.h  lostconnectionexception.h  nonetmaumauserverexception.h  playerlistexception.h  protocolerrorexception.h  remoteplayerexception.h  scoresexception.h  shutdownexception.h  socketexception.h  timeoutexception.h  tmp.h  versionmismatchexception.h
src/lua/: Makefile.am  luaexception.cpp  luaexception.h  luafatalexception.cpp  luafatalexception.h  luaruleset.cpp  luaruleset.h  luastate.cpp  luastate.h  stdrules.lua
src/server/: Makefile.am  ai-icon.h  cachepolicyfactory.cpp  cachepolicyfactory.h  create_ai_icon.sh  game.cpp  game.h  gameconfig.cpp  gameconfig.h  gamecontext.cpp  gamecontext.h  helpers.cpp  helpers.h  httpd.cpp  httpd.h  main.cpp  netmaumau.rc.in  serverconnection.cpp  serverconnection.h  servereventhandler.cpp  servereventhandler.h  serverplayer.cpp  serverplayer.h  serverplayerexception.cpp  serverplayerexception.h  ttynamecheckdir.cpp  ttynamecheckdir.h
src/server/images/: Makefile.am
src/sqlite/: Makefile.am  sqlite.cpp  sqlite.h  sqliteimpl.cpp  sqliteimpl.h
src/test/: Makefile.am  stresstest.sh.in  test_aidt.cpp  test_client.cpp  test_netmaumau.cpp  testclient.cpp  testclient.h  testeventhandler.cpp  testeventhandler.h  testimg.h
(+7 files in other folders)
